FlightPath 5.x Changelog
========================

2016-04-22
  Added ability to "view/print all" advising histories, just like the comments.
  
  Added track descriptions to what if selection screen


2016-04-19
  Made various changes in AdvisingScreen, and added a new hook, so that course rows could be further themed by
  modules, before they are drawn on screen.  This is partially so that the prereqs module will more easily work.
  
  Added better CSS to admin.degrees.inc.

2016-04-14
  Added extra functionality to CourseList.
  

2016-04-09
  To prepare for dealing with prereqs, I changed the way the draw_course_row function is written in AdvisingScreen,
  to allow hooks to change elements of it.
  

2016-04-06
  Fixed isses with db queries which specified '?~?' or similar syntax, which is incompatible with the new PDO system.
  
  Changed checkboxes to use spans with classes for graphics, so we can easily overwrite as needed.
  

2016-04-05
  Replaced some hard-coded values with constants.
  
  Fixed bug with group titles in view and what if.

  Fixed mysql bug in course_search.module, fixed various issues which were causing "notices".
  

2016-04-04
  Fixed bug in what if selection screen for tracks.  Added new javascript function to create CSS-friendly strings.
  
  Added ability in System Settings to show group titles on View and What If screens, not just in print mode.
  

2016-04-01
  Fixed a bug in user.student.inc where major codes were not being read correctly from student_degrees table.
  

2016-03-31
  Added option to CourseList function sort_alphabetical_order, to include the degree's advising weight of the degree the course requires first, to make
  it also get sorted by degree.
  
  Changed the way semester blocks are drawn in AdvisingScreen, to group degrees together by advising weight, then name, alphabetically.
  Made similar changes to AdvisingScreenTypeView.  Also added more CSS classes to elements, making it easier to target.


2016-03-30