@@ -4,7 +4,7 @@
 class _Student extends stdClass
 {
 	public $student_id, $name, $major_code_array, $major_code_csv, $gpa, $cumulative_hours, $catalog_year;
-	public $list_courses_taken, $list_courses_advised, $list_courses_added, $db, $rank;
+	public $list_courses_taken, $list_courses_advised, $list_courses_added, $db, $rank, $db_rank;
 	public $list_standardized_tests, $list_substitutions;
 	public $list_transfer_eqvs_unassigned;
 	public $array_settings, $array_significant_courses, $array_hide_grades_terms;
@@ -485,7 +485,8 @@ class _Student extends stdClass
 
     $this->cumulative_hours = $this->db->get_student_cumulative_hours($this->student_id);	
 		$this->gpa = $this->db->get_student_gpa($this->student_id);
-    $this->rank = $this->get_rank_description($this->db->get_student_rank($this->student_id));
+    $this->db_rank = $this->db->get_student_rank($this->student_id);
+    $this->rank = $this->get_rank_description($this->db_rank);
     $this->major_code_array = fp_get_student_majors($this->student_id, FALSE);
     $this->major_code_csv = fp_get_student_majors($this->student_id, TRUE);
 		$this->catalog_year = $this->db->get_student_catalog_year($this->student_id);
